fixed some layout issues and added more content

--- a/assets/main.css
+++ b/assets/main.css
@@ -708,7 +708,7 @@ body {
 }
 
 .imprint a {
-    color: #fff;
+    color: rgba(255, 255, 255, .4);;
 }
 
 .imprint a:hover {
